fix z-index of floating navigation bar

--- a/css/iswc.css
+++ b/css/iswc.css
@@ -196,7 +196,7 @@ div.iswc-nav-top {
   width:100%;
   max-width:1000px;
   top: 0;
-  z-index: 1;
+  z-index: 100;
 }
 
 .navbar{
